Bug 462725 - MDN fails to encode subject until after an email has been sent, r+sr=bienvenu